syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateLambdaRequest {
  LambdaArgs resource = 1;
}

message ReadLambdaRequest {
  string resource_id = 1;
}

message UpdateLambdaRequest {
  string resource_id = 1;
  LambdaArgs resource = 2;
}

message DeleteLambdaRequest {
  string resource_id = 1;
}

message LambdaArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  string runtime = 3;
  string source_code_object_id = 4;

  // outputs
  string url = 5;
}

message LambdaResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  string runtime = 3;
  string source_code_object_id = 4;
}
